Add historic evolution emulator syncing buttons

--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -21,6 +21,8 @@
             <system:Double x:Key="ButtonWidth">50</system:Double>
             <system:Double x:Key="TextBlockWidth">80</system:Double>
             
+            <Duration x:Key="PanelAnimationDuration">0:0:0.5</Duration>
+            
             <SolidColorBrush x:Key="DefaultBackGroundColor" Color="#2E3841"/>
 
             <conversion:EnumToImageConverter x:Key="EnumToImageConverter" />
